@@ -103,53 +103,6 @@ def ERP5Site_clearActivities(self):
   os.remove(flag_fs_path)
   return
 
-def ERP5Site_upgradeMySQLCharset(self, upgrade=0):
-  """
-    Update the catalog charset running a external command.
-  """
-  from subprocess import Popen, PIPE
-  portal = self.getPortalObject()
-  message_list = []
-  database = portal.erp5_sql_connection.connection_string.split(' ')[0]
-  connection_string = ''
-  if '@' in database:
-    # This means the format database@hostname:port was used.
-    connection_string += ' -u root '
-    database_name , hostname = database.split("@")
-    if ":" in hostname:
-      new_hostname, port = hostname.split(":")
-      hostname = new_hostname
-      connection_string += ' --port=%s ' % port
-    connection_string += ' --host=%s ' % hostname
-    database = database_name
-
-  message = "ERP5Site_verifyMySQLCharset: Invalid configuration for: %s (%s)"
-  command = "echo \"show variables like '%%char%%'\" | mysql %s %s -Ns" % (connection_string, database)
-  stdout, stderr = Popen(command, stderr=PIPE, stdout=PIPE, 
-                         close_fds=True, shell=True).communicate()
-  for line in stdout.split("\n"):
-    if not line.strip(" ") == "" and \
-       not ('character_set_filesystem' in line and 'binary' in line) and \
-       not ('character_sets_dir' in line) and \
-       not ('utf8' in line and 'character_set_filesystem' not in line):
-      message_list.append(message % (database, line.replace("\t", " = ")))
-
-  if not upgrade:
-    return message_list
-  
-  if len(message_list) > 0:
-    message_list = ["Upgrade was required to ERP5Site_verifyMySQLCharset."]
-    SQL = portal.ERP5Site_getUpgradeCatalogCharsetSQL(context=portal)
-    command = "echo '%s' | mysql %s " % (SQL, connection_string)
-    stdout, stderr = Popen(command, stderr=PIPE, stdout=PIPE, 
-                           close_fds=True, shell=True).communicate()
-
-    message_list.append("Upgrade Executed required to ERP5Site_upgradeMySQLCharset.")
-    message_list.append("ERP5Site_upgraadeMySQLCharset STDERR: %s" % stderr) 
-    message_list.append("ERP5Site_upgradeMySQLCharset STDOUT: %s" % stdout)
-
-  return message_list 
-
 def ERP5Site_runVerificationScript(self, method_id):
   """ Run a Python Script return the method. This should avoid raise error, 
       even one intergrity verification script raise error, and provide good
