@@ -1,92 +1,0 @@
-<?xml version="1.0"?>
-<ZopeData>
-  <record id="1" aka="AAAAAAAAAAE=">
-    <pickle>
-      <global name="PythonScript" module="Products.PythonScripts.PythonScript"/>
-    </pickle>
-    <pickle>
-      <dictionary>
-        <item>
-            <key> <string>Script_magic</string> </key>
-            <value> <int>3</int> </value>
-        </item>
-        <item>
-            <key> <string>_bind_names</string> </key>
-            <value>
-              <object>
-                <klass>
-                  <global name="NameAssignments" module="Shared.DC.Scripts.Bindings"/>
-                </klass>
-                <tuple/>
-                <state>
-                  <dictionary>
-                    <item>
-                        <key> <string>_asgns</string> </key>
-                        <value>
-                          <dictionary>
-                            <item>
-                                <key> <string>name_container</string> </key>
-                                <value> <string>container</string> </value>
-                            </item>
-                            <item>
-                                <key> <string>name_context</string> </key>
-                                <value> <string>context</string> </value>
-                            </item>
-                            <item>
-                                <key> <string>name_m_self</string> </key>
-                                <value> <string>script</string> </value>
-                            </item>
-                            <item>
-                                <key> <string>name_subpath</string> </key>
-                                <value> <string>traverse_subpath</string> </value>
-                            </item>
-                          </dictionary>
-                        </value>
-                    </item>
-                  </dictionary>
-                </state>
-              </object>
-            </value>
-        </item>
-        <item>
-            <key> <string>_body</string> </key>
-            <value> <string>database = context.erp5_sql_connection.connection_string.split(\' \')[0]\n
-database_name = database.split("@")[0]\n
-\n
-alter_table_str = "ALTER TABLE %s CHARSET=%s;"\n
-alter_database_str = "ALTER DATABASE %s %s=%s;"\n
-default_encode = \'utf8\'\n
-\n
-sql_list = []\n
-\n
-database_set_list = [\'CHARSET\']\n
-\n
-table_set_list = [\'catalog\',\'alarm\',\'catalog\',\'category\',\'delivery\',\'email\',\n
-                  \'full_text\',\'inventory\',\'inventory_stock\',\'item\',\'measure\',\n
-                  \'message\',\'message_queue\',\'movement\',\'portal_ids\',\'predicate\',\n
-                  \'predicate_category\',\'record\',\'roles_and_users\',\'stock\',\n
-                  \'subject\',\'translation\',\'versioning\']\n
-\n
-for data_set in database_set_list:\n
-  sql_list.append(alter_database_str % (database_name, data_set, default_encode))\n
-\n
-sql_list.append("USE %s;" % database_name)\n
-\n
-for table_set in table_set_list:\n
-  sql_list.append(alter_table_str % (table_set, default_encode))\n
-\n
-return \'\\n\'.join(sql_list)\n
-</string> </value>
-        </item>
-        <item>
-            <key> <string>_params</string> </key>
-            <value> <string></string> </value>
-        </item>
-        <item>
-            <key> <string>id</string> </key>
-            <value> <string>ERP5Site_getUpgradeCatalogCharsetSQL</string> </value>
-        </item>
-      </dictionary>
-    </pickle>
-  </record>
-</ZopeData>
