@@ -285,7 +285,6 @@ FINALIZE_ALARM_SCRIPT = ( \'ERP5Site_upgradeGlobalPropertyList\',\n
                           \'ERP5Site_upgradeObjectClass\',\n
                           \'ERP5Site_upgradeSQLCatalogFilter\',\n
                           \'ERP5Site_upgradeAlarmToolConfiguration\',\n
-                         #\'ERP5Site_upgradeMySQLCharset\',\n
                         )\n
 \n
 # \n
